--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.3",
+    "cli-table": "^0.3.11",
     "figlet": "^1.6.0",
     "gradient-string": "^2.0.2",
-    "inquirer": "^9.2.8"
+    "inquirer": "^9.2.8",
+    "mongodb": "^5.7.0",
+    "nanospinner": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
