--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "args": "^5.0.3",
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.3",
     "cli-table": "^0.3.11",
@@ -18,7 +19,9 @@
     "gradient-string": "^2.0.2",
     "inquirer": "^9.2.8",
     "mongodb": "^5.7.0",
-    "nanospinner": "^1.1.0"
+    "nanospinner": "^1.1.0",
+    "optionator": "^0.9.3",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
