--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "args": "^5.0.3",
+    "axios": "^1.4.0",
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.3",
     "cli-table": "^0.3.11",
